# Whiskey-Tasting

./: .gitignore  .roomodes  AGENTS.md  BackfillData.csv  CLAUDE.md  Dockerfile  Issues.md  MOBILE_PLAN.md  NTFY.md  README.md  SETUP.md  TESTING.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: auto-assign.yml  ci-cd.yml  deploy.yml  docker-image.yml  mobile-release.yml  opencode.yml
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
apps/backend/: pyproject.toml  requirements.txt
apps/backend/app/: __init__.py  config.py  database.py  main.py  notifications.py
apps/backend/app/routers/: __init__.py  config.py  health.py  tastings.py  themes.py  users.py  whiskeys.py
apps/backend/app/schemas/: __init__.py  models.py
apps/backend/scripts/: CLEANUP_RUNBOOK.md  cleanup_orphan_tastings.py
apps/backend/tests/: conftest.py  test_api.py  test_database.py  test_error_handling.py  test_integration.py  test_notifications.py  test_seed_data.py
apps/frontend/: browser-test.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts  vitest.setup.ts
apps/frontend/app/: layout.tsx
apps/frontend/e2e/: auth-flow.spec.ts  (+5 more)
apps/mobile/: .gitignore  DISTRIBUTION.md  app.json  eas.json  expo-env.d.ts  jest.config.js  package-lock.json  package.json  shell.nix
docker/: start.sh
docker/staging-test/: .gitignore  README.md  docker-compose.yml
nix/: pythonShell.nix
scripts/: run-service-tests.sh
(+109 files in other folders)
